--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "watts",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@daily-co/daily-js": "^0.47.0",
     "@emailjs/browser": "^3.11.0",
@@ -27,7 +28,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
